# wallshader

./: .gitignore  Cargo.toml  wallpaper.glsl
src/: client.rs  display.rs  main.rs  render.rs  vertex.wgsl  wallpaper.wgsl
