[package]
name = "wallshader"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.11"
log = "0.4.33"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
smithay-client-toolkit = "0.20.0"
wayland-client = { version = "0.31.14", features = ["system"] }
wgpu = { version = "29.0.3", features = ["glsl"] }
